--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Server config
-SPRING_PORT=8080
 
 #DB config
-#DB_URL=jdbc:mysql://localhost:3306/E-Commerce
-#DB_USERNAME=root
-#DB_PASSWORD=@root
+DB_URL=jdbc:mysql://localhost:3306/E-Commerce
+DB_USERNAME=root
+DB_PASSWORD=@root
