--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
 #DB config
-DB_URL=jdbc:mysql://localhost:3306/E-Commerce
+DB_URL=jdbc:mysql://localhost:3306/ecommerce
 DB_USERNAME=root
-DB_PASSWORD=@root
+DB_PASSWORD=shahd
